--- a/client/package.json
+++ b/client/package.json
@@ -5,20 +5,34 @@
   "author": "Henry Burgess <henryjburg@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start": "webpack serve",
     "build": "webpack",
     "clean": "rm -rf dist",
     "lint": "prettier --write ."
   },
-  "dependencies": {},
+  "dependencies": {
+    "@fontsource/roboto": "^4.5.5",
+    "grommet": "^2.22.0",
+    "grommet-icons": "^4.7.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
   "devDependencies": {
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
+    "html-webpack-plugin": "^5.5.0",
     "prettier": "2.6.2",
+    "style-loader": "^3.3.1",
+    "styled-components": "^5.3.5",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
