--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.5",
+    "@types/react-router-dom": "^5.3.3",
     "grommet": "^2.22.0",
     "grommet-icons": "^4.7.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.5",
