--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "dist/main.js",
+  "types": "dist/index.d.ts",
   "author": "Henry Burgess <henryjburg@gmail.com>",
   "license": "MIT",
   "scripts": {
