--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SampleFlow",
+  "name": "lab",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/henry-burgess/SampleFlow.git",
