--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "lint": "prettier --write ."
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
+    "consola": "^2.15.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
