--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,13 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-flow-renderer": "^10.3.17",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "css-loader": "^6.7.1",
