--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/react": "^18.0.25",
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
