Update repository name

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "laboratory-data-management",
+  "name": "metadata-manager",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/henry-burgess/laboratory-data-management.git",
+  "repository": "https://github.com/henry-burgess/metadata-manager.git",
   "author": "Henry Burgess <henryjburg@gmail.com>",
   "license": "MIT"
 }
