--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js",
     "build": "npx tsc",
     "clean": "rm -rf dist",
+    "container": "docker build --file=server/server.dockerfile -t server .",
     "lint": "prettier --write ."
   },
   "dependencies": {
