Update Collection create screen

--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,11 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.5",
     "@types/react-router-dom": "^5.3.3",
+    "chakra-dayzed-datepicker": "^0.2.5",
+    "chakra-multiselect": "^0.3.7",
     "consola": "^2.15.3",
+    "date-fns": "^2.29.3",
+    "dayzed": "^3.2.3",
     "framer-motion": "^7.6.9",
     "grommet": "^2.24.0",
     "grommet-icons": "^4.7.0",
