--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "consola": "^2.15.3",
     "date-fns": "^2.29.3",
     "dayzed": "^3.2.3",
+    "elkjs": "^0.8.2",
     "framer-motion": "^7.6.9",
     "json2csv": "^5.0.7",
     "react": "^18.0.0",
