--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,25 +18,16 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Start Docker containers
+      run: docker-compose -f "docker-compose.yml" up -d --build
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Start MongoDB
-      uses: supercharge/mongodb-github-action@1.8.0
-      with:
-        mongodb-version: ${{ matrix.mongodb-version }}
-        mongodb-username: admin
-        mongodb-password: metadataadmin
-        mongodb-db: metadata
-
-    - name: Setup MongoDB
-      working-directory: ./server
-      run: mongo localhost:27017/metadata ./setup.js
-
     - name: Test
       working-directory: ./server
       run: |
         yarn
-        yarn build
+        yarn test
