Update tool name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metadata-manager",
+  "name": "mars",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/henry-burgess/metadata-manager.git",
