--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.6.3"
   },
   "jest": {
-    "preset": "ts-jest"
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
