Run linter on server

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,7 +6,7 @@
     "importHelpers": true,
     "baseUrl": "./",
     "paths": {
-      "@types": ["../types"],
+      "@types": ["../types"]
     },
     "rootDirs": ["src"],
     "outDir": "dist",
