--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "npx tsc",
+    "build": "esbuild src/index.ts --platform=node --outdir=dist --bundle --minify",
     "test": "jest",
     "clean": "rm -rf dist",
     "container": "docker build --file=server/server.dockerfile -t server .",
@@ -16,6 +16,7 @@
     "consola": "^2.15.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "esbuild": "^0.17.14",
     "express": "^4.18.1",
     "jest": "^29.4.3",
     "mongodb": "^4.6.0",
