--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "esbuild src/index.ts --platform=node --outdir=dist --bundle --minify",
+    "build:container": "docker build --file=server/server.dockerfile -t server .",
     "test": "jest",
     "clean": "rm -rf dist",
-    "container": "docker build --file=server/server.dockerfile -t server .",
     "lint": "prettier --write ."
   },
   "dependencies": {
