--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "jest": "^29.4.3",
     "mongodb": "^4.6.0",
+    "nanoid": "^4.0.2",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
@@ -33,11 +34,14 @@
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.6.2",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.6.3"
   },
   "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node"
+    "preset": "ts-jest/presets/js-with-ts",
+    "testEnvironment": "node",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(nanoid))"
+    ]
   }
 }
