Fix testing issues

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "module": "CommonJS",
     "target": "ES2016",
+    "allowJs": true,
     "importHelpers": true,
     "baseUrl": "./",
     "paths": {
