--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,14 @@
     "jest": "^29.4.3",
     "mongodb": "^4.6.0",
     "nanoid": "^4.0.2",
+    "papaparse": "^5.4.1",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.25",
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
