--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "dayzed": "^3.2.3",
     "elkjs": "^0.8.2",
     "framer-motion": "^7.6.9",
-    "json2csv": "^5.0.7",
+    "nanoid": "^4.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-flow-renderer": "^10.3.17",
