--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,10 @@
     "esbuild": "^0.17.14",
     "express": "^4.18.1",
     "jest": "^29.4.3",
+    "lodash": "^4.17.21",
     "mongodb": "^4.6.0",
     "nanoid": "^4.0.2",
-    "papaparse": "^5.4.1",
-    "underscore": "^1.13.6"
+    "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
