--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.5",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.3.5",
     "chakra-dayzed-datepicker": "^0.2.5",
     "consola": "^2.15.3",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "dayzed": "^3.2.3",
     "elkjs": "^0.8.2",
+    "file-saver": "^2.0.5",
     "framer-motion": "^7.6.9",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
@@ -31,10 +33,13 @@
     "react-dom": "^18.0.0",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/json2csv": "^5.0.3",
+    "@types/lodash": "^4.14.192",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "@types/underscore": "^1.11.4",
