--- a/server/package.json
+++ b/server/package.json
@@ -21,14 +21,17 @@
     "lodash": "^4.17.21",
     "mongodb": "^4.6.0",
     "nanoid": "^4.0.2",
-    "papaparse": "^5.4.1"
+    "papaparse": "^5.4.1",
+    "tmp": "^0.2.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.192",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.25",
+    "@types/tmp": "^0.2.3",
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
