--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.3.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "table": "^6.8.1"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
