--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "consola": "^2.15.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.1",
     "esbuild": "^0.17.14",
     "express": "^4.18.1",
