--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.12",
     "@chakra-ui/react": "^2.4.1",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.5",
+    "@tanstack/react-table": "^8.8.5",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.5",
     "consola": "^3.0.2",
