Add initial scanner connectivity
Listens and responds to disconnect, connect events

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,6 +10,7 @@
     "paths": {
       "@components/*": ["./src/components/*"],
       "@database/*": ["./src/database/*"],
+      "@devices/*": ["./src/devices/*"],
       "@pages/*": ["./src/pages/*"],
       "@types": ["../types"]
     },
