--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jest": "^29.4.3",
     "lodash": "^4.17.21",
     "mongodb": "^4.6.0",
+    "mquery": "^5.0.0",
     "nanoid": "^4.0.2",
     "papaparse": "^5.4.1",
     "tmp": "^0.2.1"
@@ -30,6 +31,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.192",
+    "@types/node": "^20.3.1",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.25",
     "@types/tmp": "^0.2.3",
