--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.1",
     "esbuild": "^0.17.14",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "jest": "^29.4.3",
     "lodash": "^4.17.21",
     "mongodb": "^4.6.0",
@@ -30,6 +31,7 @@
     "@jest/globals": "^29.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.4.1",
     "@types/lodash": "^4.14.192",
     "@types/node": "^20.3.1",
     "@types/papaparse": "^5.3.7",
