--- a/client/staticwebapp.config.json
+++ b/client/staticwebapp.config.json
@@ -1,6 +1,5 @@
 {
   "navigationFallback": {
-    "rewrite": "/src/index.html",
-    "exclude": ["/img/*.{png,jpg,gif}", "/src/styles/*"]
+    "rewrite": "/index.html"
   }
 }
