--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "main": "dist/index.js",
   "author": "Henry Burgess <henryjburg@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node dist/index.js",
     "build": "esbuild src/index.ts --platform=node --outdir=dist --bundle --minify",
