--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "esbuild": "^0.17.14",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "helmet": "^7.0.0",
     "jest": "^29.4.3",
     "lodash": "^4.17.21",
     "mongodb": "^4.6.0",
