--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "express-fileupload": "^1.4.0",
     "helmet": "^7.0.0",
     "jest": "^29.4.3",
+    "jsonwebtoken": "^9.0.1",
+    "jwks-rsa": "^3.0.1",
     "lodash": "^4.17.21",
     "mongodb": "^4.6.0",
     "mquery": "^5.0.0",
