--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,8 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack",
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "clean": "rm -rf dist",
     "lint": "prettier --write ."
   },
@@ -63,6 +63,7 @@
     "web-worker": "^1.2.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.15.0"
+    "webpack-dev-server": "^4.15.0",
+    "webpack-merge": "^5.9.0"
   }
 }
