--- a/server/package.json
+++ b/server/package.json
@@ -28,12 +28,12 @@
     "jsonwebtoken": "^9.0.1",
     "jwks-rsa": "^3.0.1",
     "lodash": "^4.17.21",
-    "mongodb": "^4.6.0",
+    "mongodb": "^4.17.0",
     "mquery": "^5.0.0",
     "nanoid": "^4.0.2",
     "papaparse": "^5.4.1",
     "tmp": "^0.2.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
   "devDependencies": {
     "@jest/globals": "^29.4.3",
@@ -51,8 +51,10 @@
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.6.2",
+    "semver": "^7.5.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "word-wrap": "^1.2.4"
   },
   "jest": {
     "preset": "ts-jest/presets/js-with-ts",
