--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "main": "index.js",
   "repository": "https://github.com/Brain-Development-and-Disorders-Lab/mars.git",
   "author": "Henry Burgess <henryjburg@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "cypress": "^13.4.0",
+    "typescript": "^5.2.2"
+  }
 }
