--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Upload Client Build Artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-artifacts
+        name: build-client-artifacts
         path: ./client/dist
 
   server:
@@ -59,5 +59,5 @@ jobs:
     - name: Upload Server Build Artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-artifacts
+        name: build-server-artifacts
         path: ./server/dist
