--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "clean": "rm -rf dist",
-    "lint": "prettier --write ."
+    "lint": "prettier --write .",
+    "test": "jest  --verbose"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.12",
@@ -43,7 +44,16 @@
     "table": "^6.8.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@cfaester/enzyme-adapter-react-18": "^0.7.1",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@types/enzyme": "^3.10.16",
     "@types/file-saver": "^2.0.5",
+    "@types/jest": "^29.5.8",
     "@types/json2csv": "^5.0.3",
     "@types/lodash": "^4.14.192",
     "@types/react": "^18.0.5",
@@ -52,12 +62,17 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "css-loader": "^6.7.1",
+    "enzyme": "^3.11.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-module-name-mapper": "^0.1.5",
     "prettier": "2.6.2",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.5",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
     "web-worker": "^1.2.0",
