--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "esbuild src/index.ts --platform=node --outdir=dist --bundle --minify",
+    "buildDev": "esbuild src/index.ts --platform=node --outdir=dist --bundle --sourcemap --watch",
+    "startDev": "node --inspect dist/index.js",
     "test": "jest",
     "clean": "rm -rf dist",
     "lint": "prettier --write ."
@@ -32,6 +34,7 @@
     "mquery": "^5.0.0",
     "nanoid": "^4.0.2",
     "papaparse": "^5.4.1",
+    "source-map-support": "^0.5.21",
     "tmp": "^0.2.1",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.0/xlsx-0.20.0.tgz"
   },
