--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-pdf": "^7.3.3",
+    "react-querybuilder": "^6.5.4",
     "react-router-dom": "^6.3.0",
     "reactflow": "^11.7.0",
     "slugify": "^1.6.6",
