code cleanup and started getDataMultiple refactor

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -57,7 +57,7 @@ jobs:
       working-directory: ./server
       run: |
         yarn install
-        yarn buildDebbug
+        yarn buildDebug
 
     # Test the server
     - name: Test Server
