--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,21 @@
-name: Deploy MARS Client
+name: Deploy client and server
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
   workflow_dispatch:
 
+# Environment variables for server deployment only
+env:
+  CONNECTION_STRING: mongodb://admin:metadataadmin@localhost:27017/
+  AZURE_WEBAPP_NAME: MARS
+  AZURE_WEBAPP_PACKAGE_PATH: './server'
+  NODE_VERSION: '18.x'
+
 jobs:
-  build_and_deploy_job:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+  deploy_client:
     runs-on: ubuntu-latest
-    name: Build and Deploy Job
+    name: Deploy client
     steps:
       - uses: actions/checkout@v2
         with:
@@ -26,14 +31,45 @@ jobs:
           api_location: "/server" # API source code path
           output_location: "/dist" # Built app content directory
 
-  close_pull_request_job:
-    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+  build_server:
     runs-on: ubuntu-latest
-    name: Close Pull Request Job
     steps:
-      - name: Close Pull Request
-        id: closepullrequest
-        uses: Azure/static-web-apps-deploy@v1
-        with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_RED_WAVE_02CDDA510 }}
-          action: "close"
+    - uses: actions/checkout@v4
+
+    - name: Use Node.js ${{ env.NODE_VERSION }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ env.NODE_VERSION }}
+
+    - name: Create .env file
+      working-directory: server
+      run: |
+        touch .env
+        echo "CONNECTION_STRING=${{ env.CONNECTION_STRING }}" >> .env
+        echo "PORT=8000" >> .env
+        echo "NODE_ENV=development" >> .env
+        echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> .env
+        echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> .env
+
+    - name: Build Server
+      working-directory: ./server
+      run: |
+        yarn install
+        yarn buildDebug
+
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v3
+      with:
+        name: mars-server
+        path: .
+
+  # close_pr:
+  #   runs-on: ubuntu-latest
+  #   name: Close pull request
+  #   steps:
+  #     - name: Close pull request
+  #       id: closepullrequest
+  #       uses: Azure/static-web-apps-deploy@v1
+  #       with:
+  #         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_RED_WAVE_02CDDA510 }}
+  #         action: "close"
