--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 # Environment variables for server deployment only
 env:
   CONNECTION_STRING: mongodb://admin:metadataadmin@localhost:27017/
-  AZURE_WEBAPP_NAME: MARS
+  AZURE_WEBAPP_NAME: mars-server
   AZURE_WEBAPP_PACKAGE_PATH: './server'
   NODE_VERSION: '18.x'
 
@@ -61,7 +61,28 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: mars-server
-        path: .
+        path: ./server/dist
+
+  deploy_server:
+    runs-on: ubuntu-latest
+    needs: build_server
+    environment:
+      name: production
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v4
+      with:
+        name: mars-server
+
+    - name: 'Deploy to Azure WebApp'
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
   # close_pr:
   #   runs-on: ubuntu-latest
