--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,72 +13,73 @@ env:
   NODE_VERSION: '18.x'
 
 jobs:
-  deploy_client:
-    runs-on: ubuntu-latest
-    name: Deploy client
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: true
-      - name: Build And Deploy
-        id: builddeploy
-        uses: Azure/static-web-apps-deploy@v1
-        with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_RED_WAVE_02CDDA510 }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for GitHub integrations
-          action: "upload"
-          app_location: "/client" # App source code path
-          api_location: "/server" # API source code path
-          output_location: "/dist" # Built app content directory
+  # deploy_client:
+  #   runs-on: ubuntu-latest
+  #   name: Deploy client
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #       with:
+  #         submodules: true
+  #     - name: Build And Deploy
+  #       id: builddeploy
+  #       uses: Azure/static-web-apps-deploy@v1
+  #       with:
+  #         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_RED_WAVE_02CDDA510 }}
+  #         repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for GitHub integrations
+  #         action: "upload"
+  #         app_location: "/client" # App source code path
+  #         api_location: "/server" # API source code path
+  #         output_location: "/dist" # Built app content directory
 
-  build_server:
-    name: Build server
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
+  # build_server:
+  #   name: Build server
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v4
 
-    - name: Use Node.js ${{ env.NODE_VERSION }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ env.NODE_VERSION }}
+  #   - name: Use Node.js ${{ env.NODE_VERSION }}
+  #     uses: actions/setup-node@v3
+  #     with:
+  #       node-version: ${{ env.NODE_VERSION }}
 
-    - name: Create .env file
-      working-directory: server
-      run: |
-        touch .env
-        echo "CONNECTION_STRING=${{ env.CONNECTION_STRING }}" >> .env
-        echo "PORT=8000" >> .env
-        echo "NODE_ENV=development" >> .env
-        echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> .env
-        echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> .env
+  #   - name: Create .env file
+  #     working-directory: server
+  #     run: |
+  #       touch .env
+  #       echo "CONNECTION_STRING=${{ env.CONNECTION_STRING }}" >> .env
+  #       echo "PORT=8000" >> .env
+  #       echo "NODE_ENV=development" >> .env
+  #       echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> .env
+  #       echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> .env
 
-    - name: Build Server
-      working-directory: server
-      run: |
-        yarn install
-        yarn buildDebug
+  #   - name: Build Server
+  #     working-directory: server
+  #     run: |
+  #       yarn install
+  #       yarn buildDebug
 
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v4
-      with:
-        name: mars-server
-        path: ./server/dist
+  #   - name: Upload artifact for deployment job
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: mars-server
+  #       path: ./server/dist
 
   deploy_server:
     name: Deploy server
     runs-on: ubuntu-latest
-    needs: build_server
+    # needs: build_server
     environment:
       name: production
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v4
-      with:
-        name: mars-server
-    - name: Display structure of downloaded files
-      run: ls -R
+    # - name: Download artifact from build job
+    #   uses: actions/download-artifact@v4
+    #   with:
+    #     name: mars-server
+    # - name: Display structure of downloaded files
+    #   run: ls -R
+    - uses: actions/checkout@v4
 
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp
