--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
   workflow_dispatch:
 
-# Environment variables for server deployment only
+# Note: Environment variables used for server deployment only
 env:
   CONNECTION_STRING: mongodb://admin:metadataadmin@localhost:27017/
   AZURE_WEBAPP_NAME: mars-server
@@ -13,89 +13,40 @@ env:
   NODE_VERSION: '18.x'
 
 jobs:
-  # deploy_client:
-  #   runs-on: ubuntu-latest
-  #   name: Deploy client
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         submodules: true
-  #     - name: Build And Deploy
-  #       id: builddeploy
-  #       uses: Azure/static-web-apps-deploy@v1
-  #       with:
-  #         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_RED_WAVE_02CDDA510 }}
-  #         repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for GitHub integrations
-  #         action: "upload"
-  #         app_location: "/client" # App source code path
-  #         api_location: "/server" # API source code path
-  #         output_location: "/dist" # Built app content directory
+  deploy_client:
+    runs-on: ubuntu-latest
+    name: Deploy client
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: true
 
-  # build_server:
-  #   name: Build server
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - uses: actions/checkout@v4
-
-  #   - name: Use Node.js ${{ env.NODE_VERSION }}
-  #     uses: actions/setup-node@v3
-  #     with:
-  #       node-version: ${{ env.NODE_VERSION }}
-
-  #   - name: Create .env file
-  #     working-directory: server
-  #     run: |
-  #       touch .env
-  #       echo "CONNECTION_STRING=${{ env.CONNECTION_STRING }}" >> .env
-  #       echo "PORT=8000" >> .env
-  #       echo "NODE_ENV=development" >> .env
-  #       echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> .env
-  #       echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> .env
-
-  #   - name: Build Server
-  #     working-directory: server
-  #     run: |
-  #       yarn install
-  #       yarn buildDebug
-
-  #   - name: Upload artifact for deployment job
-  #     uses: actions/upload-artifact@v4
-  #     with:
-  #       name: mars-server
-  #       path: ./server/dist
+    # Run client deployment
+    - name: Deploy to Azure Static Web Apps
+      id: deploy-static-web-app
+      uses: Azure/static-web-apps-deploy@v1
+      with:
+        azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_RED_WAVE_02CDDA510 }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        action: "upload"
+        app_location: "/client"
+        api_location: "/server"
+        output_location: "/dist"
 
   deploy_server:
     name: Deploy server
     runs-on: ubuntu-latest
-    # needs: build_server
     environment:
       name: production
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+      url: ${{ steps.deploy-webapp.outputs.webapp-url }}
     steps:
-    # - name: Download artifact from build job
-    #   uses: actions/download-artifact@v4
-    #   with:
-    #     name: mars-server
-    # - name: Display structure of downloaded files
-    #   run: ls -R
     - uses: actions/checkout@v4
 
-    - name: 'Deploy to Azure WebApp'
-      id: deploy-to-webapp
+    # Run server deployment
+    - name: Deploy to Azure Web App
+      id: deploy-webapp
       uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-
-  # close_pr:
-  #   runs-on: ubuntu-latest
-  #   name: Close pull request
-  #   steps:
-  #     - name: Close pull request
-  #       id: closepullrequest
-  #       uses: Azure/static-web-apps-deploy@v1
-  #       with:
-  #         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_RED_WAVE_02CDDA510 }}
-  #         action: "close"
