--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "test": "jest  --verbose"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.1",
     "@chakra-ui/icons": "^2.0.12",
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
@@ -31,6 +32,7 @@
     "elkjs": "^0.8.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^10.16.4",
+    "graphql": "^16.8.1",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
     "pdfjs-dist": "^3.9.179",
