--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -16,11 +16,6 @@ jobs:
   server:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-        mongodb-version: ["6.0"]
-
     steps:
     - uses: actions/checkout@v4
 
@@ -28,10 +23,10 @@ jobs:
     - name: Start Docker containers
       run: docker-compose -f "docker-compose.yml" up -d --build
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 18.x
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18.x
 
     - name: Install dependencies
       run: yarn install
