--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,20 +32,65 @@ jobs:
         api_location: "/server"
         output_location: "/dist"
 
+  build_server:
+    name: Build server
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
+
+      # Create .env file for server and build server
+      - name: Create .env file
+        working-directory: server
+        run: |
+          touch .env
+          echo "CONNECTION_STRING=${{ secrets.CONNECTION_STRING }}" >> .env
+          echo "PORT=8000" >> .env
+          echo "NODE_ENV=development" >> .env
+          echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> .env
+          echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> .env
+
+      - name: Build server
+        working-directory: server
+        run: |
+          yarn install
+          yarn build
+
+      - name: Compress build output
+        working-directory: server
+        run: zip -r out.zip ./* .env
+
+      - name: Upload build output for deployment
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: ./server/out.zip
+
+
   deploy_server:
     name: Deploy server
     runs-on: ubuntu-latest
+    needs: build_server
     environment:
       name: production
       url: ${{ steps.deploy-webapp.outputs.webapp-url }}
     steps:
-    - uses: actions/checkout@v4
+      - name: Download build output
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
 
-    # Run server deployment
-    - name: Deploy to Azure Web App
-      id: deploy-webapp
-      uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+      - name: Unzip build output for Azure deployment
+        run: unzip out.zip
+
+      # Run server deployment
+      - name: Deploy to Azure Web App
+        id: deploy-webapp
+        uses: azure/webapps-deploy@85270a1854658d167ab239bce43949edb336fa7c
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
